# multi-ai-session-data-extractor

./: .dvcignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  dashboard.py  pyproject.toml  requirements.txt
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.streamlit/: config.toml
dashboard/: components.py  data.py  metrics.py  pipeline.py  progress.py  quarto.py  sync.py
data/: .gitignore  merged.dvc  processed.dvc  raw.dvc  unified.dvc
docs/: CONTRIBUTING.md  LIMITATIONS.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  claude-ai-parser-validation.md  cross-platform-features.md  dashboard-operations.md  dashboard-plan.md  dashboard.md  deepseek-probe-findings-2026-05-01.md  deepseek-server-behavior.md  dvc-runbook.md  gemini-server-behavior.md  glossary.md  notebooklm-probe-findings-2026-05-02.md  notebooklm-server-behavior.md  operations.md  parser-v3-empirical-findings.md  parser-v3-plan.md  parser-v3-validation.md  perplexity-audit-findings.md  perplexity-journey-2026-05-01.md  perplexity-pending-validations.md  platform-replication-plan.md  publish-qmds-pages.md  quarto-briefing.md  qwen-probe-findings-2026-05-01.md  qwen-server-behavior.md  serve-qmds.md
notebooks/: 00-overview-cli.qmd  00-overview-projects.qmd  00-overview-rag.qmd  00-overview-web.qmd  00-overview.qmd  _nav.qmd  _quarto.yml  _style.css  _template.qmd  _template_aux.qmd  _template_overview.qmd  chatgpt.qmd  claude-ai.qmd  claude-code.qmd  codex.qmd  deepseek.qmd  gemini-acc-1.qmd  gemini-acc-2.qmd  gemini-cli.qmd  gemini.qmd  grok.qmd  kimi.qmd  notebooklm-acc-1.qmd  notebooklm-acc-2.qmd  notebooklm-legacy.qmd  notebooklm.qmd  perplexity.qmd  qwen.qmd
scripts/: backup_to_dvc.sh  build_chatgpt_v2.py  chatgpt-download-assets.py  chatgpt-download-project-sources.py  chatgpt-export.py  chatgpt-login.py  chatgpt-parse.py  chatgpt-reconcile.py  chatgpt-refetch-known.py  chatgpt-sync.py  claude-code-parse.py  claude-code-sync.py  claude-download-assets.py  claude-export.py  claude-login.py  claude-parse.py  claude-reconcile.py  claude-refetch-known.py  claude-sync.py  cli-copy.py  codex-parse.py  codex-sync.py  copy_cli_data.py  deepseek-download-assets.py  deepseek-export.py  deepseek-login.py  deepseek-parse.py  deepseek-probe-core.py  deepseek-probe-download.py  deepseek-reconcile.py  deepseek-sync.py  extract_fixtures_v3.py  gemini-cli-parse.py  gemini-cli-sync.py  gemini-download-assets.py  gemini-export.py  gemini-login.py  gemini-merge-timestamps.py  gemini-parse.py  gemini-probe-core.py  (+66 more)
tests/: ci-smoke.qmd  test_chatgpt_sync.py  test_dashboard_metrics.py  test_dashboard_pipeline.py  test_dashboard_progress.py  test_unify_parquets.py
(+212 files in other folders)
