[project]
name = "multi-ai-session-data-extractor"
version = "0.1.0"
description = "Captura, reconcilia e parseia sessoes de AI multi-plataforma (web + CLI) em schema canonico"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "pyyaml>=6.0",
    "playwright>=1.40",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
