[project]
name = "multi-ai-session-data-extractor"
version = "0.1.0"
description = "Capture and preserve your own AI conversations locally before they vanish — 10 platforms, unified parquet schema, deletion-resilient."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Marlon Lemes" },
]
keywords = [
    "chatgpt",
    "claude-ai",
    "gemini",
    "notebooklm",
    "perplexity",
    "qwen",
    "deepseek",
    "claude-code",
    "codex",
    "conversation-history",
    "data-extraction",
    "data-preservation",
    "local-first",
    "playwright",
    "duckdb",
    "parquet",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Database",
    "Topic :: Utilities",
]

dependencies = [
    "beautifulsoup4>=4.14",
    "duckdb>=1.0",
    "pandas>=2.2",
    "playwright>=1.58",
    "pyarrow>=14.0",
    "python-dateutil>=2.9",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30",
    "plotly>=5.0",
    "itables>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
]

[project.urls]
Homepage = "https://github.com/mrlnlms/multi-ai-session-data-extractor"
Repository = "https://github.com/mrlnlms/multi-ai-session-data-extractor"
Issues = "https://github.com/mrlnlms/multi-ai-session-data-extractor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

# NOTA: este projeto NAO eh um pacote pip-instalavel.
# Roda direto do source com PYTHONPATH=. (ver docs/SETUP.md).
# pyproject.toml serve como manifesto moderno (metadata + classifiers + deps);
# requirements.txt continua como facade pra `pip install -r`.
